--- a/RainmeterEditor/RainmeterStudio.csproj
+++ b/RainmeterEditor/RainmeterStudio.csproj
@@ -69,13 +69,55 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Business\DocumentManager.cs" />
+    <Compile Include="Documents\Text\TextDocument.cs" />
+    <Compile Include="Documents\Text\TextEditorControl.xaml.cs">
+      <DependentUpon>TextEditorControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Documents\Text\TextStorage.cs" />
+    <Compile Include="Model\DocumentFormat.cs" />
+    <Compile Include="Model\IDocument.cs" />
+    <Compile Include="Model\IDocumentEditor.cs" />
+    <Compile Include="Model\IDocumentEditorFactory.cs" />
+    <Compile Include="Documents\Ini\IniDocument.cs" />
+    <Compile Include="Documents\Ini\IniSkinDesigner.cs" />
+    <Compile Include="Documents\Ini\IniSkinDesignerControl.xaml.cs">
+      <DependentUpon>IniSkinDesignerControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Documents\Ini\IniSkinDesignerFactory.cs" />
+    <Compile Include="Documents\Text\TextEditor.cs" />
+    <Compile Include="Documents\Text\TextEditorFactory.cs" />
     <Compile Include="Interop\NativeLibrary.cs" />
+    <Compile Include="Model\Property.cs" />
     <Compile Include="Model\RainmeterConfig.cs" />
     <Compile Include="Rainmeter.cs" />
+    <Compile Include="Resources\Strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\IDocumentStorage.cs" />
     <Compile Include="Storage\SkinDirectory.cs" />
+    <Compile Include="UI\Dialogs\CreateDocumentDialog.xaml.cs">
+      <DependentUpon>CreateDocumentDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Controller\DocumentController.cs" />
+    <Compile Include="Model\Events\DocumentOpenedEventArgs.cs" />
     <Compile Include="UI\SkinsPanel.xaml.cs">
       <DependentUpon>SkinsPanel.xaml</DependentUpon>
     </Compile>
+    <Page Include="Documents\Ini\IniSkinDesignerControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Documents\Text\TextEditorControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Dialogs\CreateDocumentDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UI\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -111,6 +153,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <None Include="app.config" />
     <None Include="LICENSE" />
     <None Include="packages.config" />
@@ -119,6 +165,12 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\page_white_text.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\text-x-generic-32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
