--- a/RainmeterStudio/app.config
+++ b/RainmeterStudio/app.config
@@ -1,3 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="RainmeterStudio.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
+        <RainmeterStudio.Properties.Settings>
+            <setting name="ProjectCreateCommand_Shortcut" serializeAs="String">
+                <value>Ctrl+Shift+N</value>
+            </setting>
+            <setting name="ProjectPanel_RefreshCommand_Shortcut" serializeAs="String">
+                <value>F5</value>
+            </setting>
+            <setting name="DocumentCreateCommand_Shortcut" serializeAs="String">
+                <value>Ctrl+N</value>
+            </setting>
+            <setting name="ProjectOpenCommand_Shortcut" serializeAs="String">
+                <value>Ctrl+Shift+O</value>
+            </setting>
+            <setting name="DocumentCloseCommand_Shortcut" serializeAs="String">
+                <value>Ctrl+W</value>
+            </setting>
+        </RainmeterStudio.Properties.Settings>
+    </userSettings>
+</configuration>
