--- a/RainmeterStudio/Properties/Settings.settings
+++ b/RainmeterStudio/Properties/Settings.settings
@@ -1,7 +1,21 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="RainmeterStudio.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="ProjectCreateCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Ctrl+Shift+N</Value>
+    </Setting>
+    <Setting Name="ProjectPanel_RefreshCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+      <Value Profile="(Default)">F5</Value>
+    </Setting>
+    <Setting Name="DocumentCreateCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Ctrl+N</Value>
+    </Setting>
+    <Setting Name="ProjectOpenCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Ctrl+Shift+O</Value>
+    </Setting>
+    <Setting Name="DocumentCloseCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Ctrl+W</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
