--- a/RainmeterStudio.Rainmeter/RainmeterStudio.Rainmeter.csproj
+++ b/RainmeterStudio.Rainmeter/RainmeterStudio.Rainmeter.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1D2A4896-AF31-4E82-A84F-4E218067701F}</ProjectGuid>
+    <ProjectGuid>{C641D7F8-DDDC-4EC6-8F5E-233520290642}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RainmeterStudio.Core</RootNamespace>
-    <AssemblyName>RainmeterStudio.Core</AssemblyName>
+    <RootNamespace>RainmeterStudio.Rainmeter</RootNamespace>
+    <AssemblyName>RainmeterStudio.Rainmeter</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,8 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,30 +38,21 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RainmeterStudioPluginAttribute.cs" />
-    <Compile Include="PluginExportAttribute.cs" />
-    <Compile Include="Documents\DocumentEditorFeatures\ICustomDocumentTitleProvider.cs" />
-    <Compile Include="Documents\DocumentEditorFeatures\ISelectionPropertiesProvider.cs" />
-    <Compile Include="Documents\DocumentEditorFeatures\IToolboxProvider.cs" />
-    <Compile Include="Documents\DocumentEditorFeatures\IUndoSupport.cs" />
-    <Compile Include="Documents\DocumentTemplate.cs" />
-    <Compile Include="Documents\IDocumentEditor.cs" />
-    <Compile Include="Documents\IDocumentEditorFactory.cs" />
-    <Compile Include="Storage\IDocumentStorage.cs" />
-    <Compile Include="Model\Events\DocumentOpenedEventArgs.cs" />
-    <Compile Include="Model\IDocument.cs" />
-    <Compile Include="Model\Project.cs" />
-    <Compile Include="Model\Property.cs" />
-    <Compile Include="Model\Reference.cs" />
-    <Compile Include="Model\Tree.cs" />
+    <Compile Include="DataTypes\Action.cs" />
+    <Compile Include="DataTypes\Bang.cs" />
+    <Compile Include="Group.cs" />
+    <Compile Include="Measure.cs" />
+    <Compile Include="Meter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\SerializableTree.cs" />
-    <Compile Include="Utils\DirectoryHelper.cs" />
-    <Compile Include="Utils\LinqExtension.cs" />
-    <Compile Include="Utils\TreeExtensions.cs" />
+    <Compile Include="Section.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RainmeterStudio.Core\RainmeterStudio.Core.csproj">
+      <Project>{1d2a4896-af31-4e82-a84f-4e218067701f}</Project>
+      <Name>RainmeterStudio.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
