--- a/RainmeterStudio.TextEditor/RainmeterStudio.TextEditorPlugin.csproj
+++ b/RainmeterStudio.TextEditor/RainmeterStudio.TextEditorPlugin.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\Plugins\</OutputPath>
+    <OutputPath>..\x32-Debug\StudioPlugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\Plugins\</OutputPath>
+    <OutputPath>bin\Release\StudioPlugins\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -58,6 +58,7 @@
     <ProjectReference Include="..\RainmeterStudio.Core\RainmeterStudio.Core.csproj">
       <Project>{1d2a4896-af31-4e82-a84f-4e218067701f}</Project>
       <Name>RainmeterStudio.Core</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
