--- a/RainmeterStudio/RainmeterStudio.csproj
+++ b/RainmeterStudio/RainmeterStudio.csproj
@@ -78,7 +78,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Icons.resx</DependentUpon>
     </Compile>
-    <Compile Include="Resources\ResourceProvider.cs" />
+    <Compile Include="Business\ResourceProvider.cs" />
     <Compile Include="Resources\Strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -88,7 +88,7 @@
     <Compile Include="UI\Command.cs" />
     <Compile Include="UI\Controller\IconProvider.cs" />
     <Compile Include="UI\Controller\ProjectController.cs" />
-    <Compile Include="UI\Controller\SettingsProvider.cs" />
+    <Compile Include="Business\SettingsProvider.cs" />
     <Compile Include="UI\Dialogs\CreateDocumentDialog.xaml.cs">
       <DependentUpon>CreateDocumentDialog.xaml</DependentUpon>
     </Compile>
@@ -156,6 +156,7 @@
     <EmbeddedResource Include="Resources\Icons.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Icons.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Strings.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -170,55 +171,49 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\32\text_generic.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\splash.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\arrow_left.png" />
+    <None Include="Resources\Icons\16\arrow_left.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\arrow_right.png" />
+    <None Include="Resources\Icons\16\arrow_right.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\arrow_backward.png" />
-    <Resource Include="Resources\Icons\16\arrow_forward.png" />
+    <None Include="Resources\Icons\16\arrow_backward.png" />
+    <None Include="Resources\Icons\16\arrow_forward.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\page_white_star.png" />
+    <None Include="Resources\Icons\16\page_white_star.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\project.png" />
-    <Resource Include="Resources\Icons\16\project_star.png" />
+    <None Include="Resources\Icons\16\project.png" />
+    <None Include="Resources\Icons\16\project_star.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\page_white_delete.png" />
+    <None Include="Resources\Icons\16\page_white_delete.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\folder.png" />
+    <None Include="Resources\Icons\16\folder.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\text_generic.png" />
+    <None Include="Resources\Icons\16\file_generic.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\file_generic.png" />
+    <None Include="Resources\Icons\16\arrow_refresh_small.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\arrow_refresh_small.png" />
+    <None Include="Resources\Icons\16\plus.png" />
+    <None Include="Resources\Icons\16\minus.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\plus.png" />
-    <Resource Include="Resources\Icons\16\minus.png" />
+    <None Include="Resources\Icons\16\folder_explore.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\folder_explore.png" />
+    <None Include="Resources\Icons\16\view-refresh.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\16\view-refresh.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Icons\16\folder_project.png" />
+    <None Include="Resources\Icons\16\folder_project.png" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
