--- a/RainmeterStudio/app.config
+++ b/RainmeterStudio/app.config
@@ -22,6 +22,21 @@
             <setting name="DocumentCloseCommand_Shortcut" serializeAs="String">
                 <value>Ctrl+W</value>
             </setting>
+            <setting name="MainWindow_Width" serializeAs="String">
+                <value>800</value>
+            </setting>
+            <setting name="MainWindow_Height" serializeAs="String">
+                <value>600</value>
+            </setting>
+            <setting name="MainWindow_WindowState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="MainWindow_Left" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="MainWindow_Top" serializeAs="String">
+                <value>10</value>
+            </setting>
         </RainmeterStudio.Properties.Settings>
     </userSettings>
 </configuration>
