--- a/RainmeterStudio/app.config
+++ b/RainmeterStudio/app.config
@@ -7,19 +7,20 @@
 </configSections>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
         <RainmeterStudio.Properties.Settings>
-            <setting name="ProjectCreateCommand_Shortcut" serializeAs="String">
+            <setting name="Command_ProjectCreateCommand_Shortcut" serializeAs="String">
                 <value>Ctrl+Shift+N</value>
             </setting>
-            <setting name="ProjectPanel_RefreshCommand_Shortcut" serializeAs="String">
+            <setting name="Command_ProjectPanel_RefreshCommand_Shortcut"
+                serializeAs="String">
                 <value>F5</value>
             </setting>
-            <setting name="DocumentCreateCommand_Shortcut" serializeAs="String">
+            <setting name="Command_DocumentCreateCommand_Shortcut" serializeAs="String">
                 <value>Ctrl+N</value>
             </setting>
-            <setting name="ProjectOpenCommand_Shortcut" serializeAs="String">
+            <setting name="Command_ProjectOpenCommand_Shortcut" serializeAs="String">
                 <value>Ctrl+Shift+O</value>
             </setting>
-            <setting name="DocumentCloseCommand_Shortcut" serializeAs="String">
+            <setting name="Command_DocumentCloseCommand_Shortcut" serializeAs="String">
                 <value>Ctrl+W</value>
             </setting>
             <setting name="MainWindow_Width" serializeAs="String">
