--- a/RainmeterStudio/app.config
+++ b/RainmeterStudio/app.config
@@ -38,6 +38,15 @@
             <setting name="MainWindow_Top" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="CreateProjectDialog_RecentLocations" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CreateProjectDialog_SavedLocation" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CreateProjectDialog_CreateDirectoryCheckbox" serializeAs="String">
+                <value>True</value>
+            </setting>
         </RainmeterStudio.Properties.Settings>
     </userSettings>
 </configuration>
