--- a/RainmeterStudio.Core/RainmeterStudio.Core.csproj
+++ b/RainmeterStudio.Core/RainmeterStudio.Core.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Utils\InputHelper.cs" />
     <Compile Include="Utils\LinqExtension.cs" />
     <Compile Include="Utils\BitmapHelper.cs" />
+    <Compile Include="Utils\PathHelper.cs" />
     <Compile Include="Utils\TreeExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
