--- a/RainmeterStudio/app.config
+++ b/RainmeterStudio/app.config
@@ -41,7 +41,7 @@
             <setting name="CreateProjectDialog_RecentLocations" serializeAs="String">
                 <value />
             </setting>
-            <setting name="CreateProjectDialog_SavedLocation" serializeAs="String">
+            <setting name="Project_SavedLocation" serializeAs="String">
                 <value />
             </setting>
             <setting name="CreateProjectDialog_CreateDirectoryCheckbox" serializeAs="String">
