--- a/RainmeterStudio.Core/RainmeterStudio.Core.csproj
+++ b/RainmeterStudio.Core/RainmeterStudio.Core.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Model\Reference.cs" />
     <Compile Include="Model\Tree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storage\SerializableProject.cs" />
+    <Compile Include="Storage\SerializableReference.cs" />
     <Compile Include="Storage\SerializableTree.cs" />
     <Compile Include="Utils\DirectoryHelper.cs" />
     <Compile Include="Utils\InputHelper.cs" />
