--- a/RainmeterStudio/app.config
+++ b/RainmeterStudio/app.config
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="RainmeterStudio.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <section name="RainmeterStudio.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup><userSettings>
         <RainmeterStudio.Properties.Settings>
             <setting name="Command_ProjectCreateCommand_Shortcut" serializeAs="String">
                 <value>Ctrl+Shift+N</value>
             </setting>
-            <setting name="Command_ProjectPanel_RefreshCommand_Shortcut"
-                serializeAs="String">
+            <setting name="Command_ProjectPanel_RefreshCommand_Shortcut" serializeAs="String">
                 <value>F5</value>
             </setting>
             <setting name="Command_DocumentCreateCommand_Shortcut" serializeAs="String">
@@ -39,10 +38,10 @@
                 <value>10</value>
             </setting>
             <setting name="CreateProjectDialog_RecentLocations" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Project_SavedLocation" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="CreateProjectDialog_CreateDirectoryCheckbox" serializeAs="String">
                 <value>True</value>
