--- a/RainmeterStudio/app.config
+++ b/RainmeterStudio/app.config
@@ -7,19 +7,19 @@
 </configSections>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup><userSettings>
         <RainmeterStudio.Properties.Settings>
-            <setting name="Command_ProjectCreateCommand_Shortcut" serializeAs="String">
+            <setting name="Command_ProjectCreate_Shortcut" serializeAs="String">
                 <value>Ctrl+Shift+N</value>
             </setting>
-            <setting name="Command_ProjectPanel_RefreshCommand_Shortcut" serializeAs="String">
+            <setting name="Command_ProjectPanel_Refresh_Shortcut" serializeAs="String">
                 <value>F5</value>
             </setting>
-            <setting name="Command_DocumentCreateCommand_Shortcut" serializeAs="String">
+            <setting name="Command_DocumentCreate_Shortcut" serializeAs="String">
                 <value>Ctrl+N</value>
             </setting>
-            <setting name="Command_ProjectOpenCommand_Shortcut" serializeAs="String">
+            <setting name="Command_ProjectOpen_Shortcut" serializeAs="String">
                 <value>Ctrl+Shift+O</value>
             </setting>
-            <setting name="Command_DocumentCloseCommand_Shortcut" serializeAs="String">
+            <setting name="Command_DocumentClose_Shortcut" serializeAs="String">
                 <value>Ctrl+W</value>
             </setting>
             <setting name="MainWindow_Width" serializeAs="String">
@@ -38,13 +38,19 @@
                 <value>10</value>
             </setting>
             <setting name="CreateProjectDialog_RecentLocations" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Project_SavedLocation" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="CreateProjectDialog_CreateDirectoryCheckbox" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="Command_DocumentOpen_Shortcut" serializeAs="String">
+                <value>Ctrl+O</value>
+            </setting>
+            <setting name="Command_DocumentSave_Shortcut" serializeAs="String">
+                <value>Ctrl+S</value>
             </setting>
         </RainmeterStudio.Properties.Settings>
     </userSettings>
