--- a/RainmeterStudio/Properties/Settings.settings
+++ b/RainmeterStudio/Properties/Settings.settings
@@ -2,19 +2,19 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="RainmeterStudio.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="Command_ProjectCreateCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+    <Setting Name="Command_ProjectCreate_Shortcut" Roaming="true" Type="System.String" Scope="User">
       <Value Profile="(Default)">Ctrl+Shift+N</Value>
     </Setting>
-    <Setting Name="Command_ProjectPanel_RefreshCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+    <Setting Name="Command_ProjectPanel_Refresh_Shortcut" Roaming="true" Type="System.String" Scope="User">
       <Value Profile="(Default)">F5</Value>
     </Setting>
-    <Setting Name="Command_DocumentCreateCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+    <Setting Name="Command_DocumentCreate_Shortcut" Roaming="true" Type="System.String" Scope="User">
       <Value Profile="(Default)">Ctrl+N</Value>
     </Setting>
-    <Setting Name="Command_ProjectOpenCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+    <Setting Name="Command_ProjectOpen_Shortcut" Roaming="true" Type="System.String" Scope="User">
       <Value Profile="(Default)">Ctrl+Shift+O</Value>
     </Setting>
-    <Setting Name="Command_DocumentCloseCommand_Shortcut" Roaming="true" Type="System.String" Scope="User">
+    <Setting Name="Command_DocumentClose_Shortcut" Roaming="true" Type="System.String" Scope="User">
       <Value Profile="(Default)">Ctrl+W</Value>
     </Setting>
     <Setting Name="MainWindow_Width" Type="System.Double" Scope="User">
@@ -40,6 +40,12 @@
     </Setting>
     <Setting Name="CreateProjectDialog_CreateDirectoryCheckbox" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="Command_DocumentOpen_Shortcut" Roaming="true" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Ctrl+O</Value>
+    </Setting>
+    <Setting Name="Command_DocumentSave_Shortcut" Roaming="true" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Ctrl+S</Value>
     </Setting>
   </Settings>
 </SettingsFile>
