Renamed some namespaces

--- a/RainmeterStudio.Core/RainmeterStudio.Core.csproj
+++ b/RainmeterStudio.Core/RainmeterStudio.Core.csproj
@@ -50,13 +50,13 @@
     <Compile Include="Model\IProjectTemplate.cs" />
     <Compile Include="RainmeterStudioPluginAttribute.cs" />
     <Compile Include="PluginExportAttribute.cs" />
-    <Compile Include="Documents\DocumentEditorFeatures\ICustomDocumentTitleProvider.cs" />
-    <Compile Include="Documents\DocumentEditorFeatures\ISelectionPropertiesProvider.cs" />
-    <Compile Include="Documents\DocumentEditorFeatures\IToolboxProvider.cs" />
-    <Compile Include="Documents\DocumentEditorFeatures\IUndoSupport.cs" />
+    <Compile Include="Editor\Features\ICustomDocumentTitleProvider.cs" />
+    <Compile Include="Editor\Features\ISelectionPropertiesProvider.cs" />
+    <Compile Include="Editor\Features\IToolboxProvider.cs" />
+    <Compile Include="Editor\Features\IUndoSupport.cs" />
     <Compile Include="Model\IDocumentTemplate.cs" />
-    <Compile Include="Documents\IDocumentEditor.cs" />
-    <Compile Include="Documents\IDocumentEditorFactory.cs" />
+    <Compile Include="Editor\IDocumentEditor.cs" />
+    <Compile Include="Editor\IDocumentEditorFactory.cs" />
     <Compile Include="Storage\IDocumentStorage.cs" />
     <Compile Include="Model\Events\DocumentOpenedEventArgs.cs" />
     <Compile Include="Model\IDocument.cs" />
