--- a/RainmeterStudio/RainmeterStudio.csproj
+++ b/RainmeterStudio/RainmeterStudio.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Editor\ProjectEditor\ProjectStorage.cs" />
     <Compile Include="UI\Command.cs" />
     <Compile Include="UI\Controller\IconProvider.cs" />
+    <Compile Include="UI\Controller\IContextMenuProvider.cs" />
     <Compile Include="UI\Controller\ProjectController.cs" />
     <Compile Include="Business\SettingsProvider.cs" />
     <Compile Include="UI\Dialogs\CloseUnsavedDialog.xaml.cs">
